syntax = "proto3";

package ocf.cloud.resourceaggregate.pb;

option go_package = "github.com/plgd-dev/cloud/resource-aggregate/pb;pb";

// https://github.com/openconnectivityfoundation/core/blob/master/schemas/oic.links.properties.core-schema.json
message Resource {
    string id = 1; // calucalated from href as uuid.NewV5(uuid.NamespaceURL, device_id+href)
    string href = 2;
    repeated string resource_types = 3;
    repeated string interfaces = 4;
    string device_id = 5;
    string anchor = 6;
    Policies policies = 7; // is this information valuable for the cloud or cloud user?
    string title = 8;
    repeated string supported_content_types = 9;
    repeated EndpointInformation endpoint_informations = 10; // is this information valuable for the cloud or cloud user?
    int32 time_to_live = 11;
}

message Policies {
  int32 bit_flags = 1;
}

message Content {
    bytes data = 1;
    string content_type = 2;
    int32 coap_content_format = 3; // -1 means content-format was not provided
}

message EndpointInformation {
    string endpoint = 1;
    int64 priority = 2;
}

enum Status {
  UNKNOWN = 0;
  OK = 1;
  BAD_REQUEST = 2;
  UNAUTHORIZED = 3;
  FORBIDDEN = 4;
  NOT_FOUND = 5;
  UNAVAILABLE = 6;
  NOT_IMPLEMENTED = 7;
  ACCEPTED = 8;
  ERROR = 9;
  METHOD_NOT_ALLOWED = 10;
}
